<resources>
    <string name="title_gov">City Hall</string>
    <string name="toolbar_save">Save</string>
    <string name="toolbar_load">Load</string>
    <string name="toolbar_exit">Exit</string>
    <string name="app_name">Liberty City</string>
    <string name="Tick">Tick</string>
    <string name="title_about">About game</string>
    <string name="store_interval">Buy 100ms interval. Price: 1000 points.</string>
    <string name="store_houses">Buy a district. (+18 credits/sec) Price: 1000 points.</string>
    <string name="store_zk">Buy a residential complex. (+12 credits/sec). Price: 700 points.</string>
    <string name="store_lunapark">Buy lunapark. (+15 credits/sec). Price: 850 points.</string>
    <string name="store_vokzal">Buy a train station. (+5 credits/sec). Price: 450 points.</string>
    <string name="store_zdroads">Buy railway tracks. (+2 credits / sec). Price: 300 points.</string>
    <string name="title_record">Records</string>
    <string name="low_happy">Happy level very low</string>
    <string name="low_cond">Condition level very low</string>
    <string name="high_susp">Suspens level very high</string>
    <string name="dead">Game Over! Happy dead!</string>
    <string name="full_progress">Level up!</string>
    <string name="contract_shopcenter">Build a shopping center(+15 happiness, +5 city status, -10000 credits, +8 credits/sec.)</string>
    <string name="contract_houses">Build a district(+25 happiness, +15 city status, -25000 credits, +18 credits / sec.)</string>
    <string name="contract_zk">Build a residential complex (+17 happiness, +10 city status, -18000 credits, +12 credits / sec.)</string>
    <string name="contract_lunapark">Build a lunapark(+20 happiness, +5 city state, -20000 credits, +15 credits / sec.)</string>
    <string name="finance_nalog">Collect taxes(-5 happiness, +500 credits)</string>
    <string name="finance_optimazation">Take a bribe(-10 happiness, + 1500 credits, + 15 suspicion)</string>
    <string name="finance_pile">Cut the budget(-35 happiness, + 10000 credits, + 70 suspicion)</string>
    <string name="finance_pin">Connect illegal sources(-20 happiness, + 5000 credits, +40 suspicion)</string>
    <string name="create_roads">Road construction (+7 happiness, + 10 city condition, -1200 credits)</string>
    <string name="create_park">Break the park(+15 happiness, +3 city state, -700 credits)</string>
    <string name="create_vokzal">Build a train station(+10 happiness, +20 city status, -5000 credits, +5 credits / sec.)</string>
    <string name="create_zdroads">Laying railway tracks(+5 happiness, +2 state of the city, -2500 credits, +2 credits/sec.)</string>
    <string name="title_finance">Finance</string>
    <string name="title_contract">Contract</string>
    <string name="title_create">Create</string>
    <string name="title_care">Care</string>
    <string name="care_roads">Road maintenance (+5 happiness, +5 city condition, -500 credits)</string>
    <string name="care_street">Street cleaning (+5 happiness, +2 city condition, -150 credits)</string>
    <string name="care_houses">House repairs (+15 happiness, +10 city condition, -1500 credits)</string>
    <string name="care_water">Reservoir cleaning (+5 happiness, +3 city condition, -200 credits)</string>
    <string name="start">Start</string>
    <string name="settings">Settings</string>
    <string name="store">Store</string>
    <string name="records">Records</string>
    <string name="abouttext1">An interesting urban planning clicker created on the knee (Android Studio) as a final project for IT Samsung School. The author really hopes to get at least 8 points(Well, please, I really want a certificate of a special sample;) ). P.S. I want to eat something, I don\'t mind if they feed me something. P. P. S. This section was created purely for the symmetry of the main menu, so don\'t blame the content.</string>
    <string name="abouttext2">Made by Nikita \"Fukurou\" Bekkel. (Yes, yes, I wanted to show off)</string>
    <string name="entername">Enter your name</string>
    <string name="addtorecords">Add the result to the high score table</string>
    <string name="restart">Restart</string>
    <string name="Receipts">Receipts:</string>
    <string name="credits">credits.</string>
    <string name="scores">Scores:</string>
    <string name="tresuary">Total in the treasury:</string>
    <string name="revenue">Revenue: +</string>
    <string name="taxes">Taxes: +</string>
    <string name="citylevel">City level:</string>
    <string name="centerpay">Deductions to the center: -</string>
    <string name="constantpays">Fixed costs: -</string>
    <string name="profit">Profit:</string>
    <string name="costs">Costs:</string>
    <string name="treasury">Treasury:</string>
    <string name="update">Upgrate</string>
    <string name="happy">Happy</string>
    <string name="suspicion">Suspicion</string>
    <string name="conditon">Condition</string>
    <string name="theme">Change theme</string>
    <string name="lang">English</string>
    <string name="total">Total:</string>
    <string name="skip">Skip</string>
    <string name="next">Next</string>
</resources>