<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <item
        android:id="@+id/navigation_care"
        android:icon="@drawable/baseline_plumbing_white_36dp"
        android:title="@string/title_care" />
    <item
        android:id="@+id/navigation_create"
        android:icon="@drawable/baseline_engineering_white_36dp"
        android:title="@string/title_create" />
    <item
        android:id="@+id/navigation_gov"
        android:icon="@drawable/baseline_account_balance_black_48dp"
        android:title="@string/title_gov" />
    <item
        android:id="@+id/navigation_contract"
        android:icon="@drawable/baseline_shopping_basket_white_36dp"
        android:title="@string/title_contract" />
    <item
        android:id="@+id/navigation_finance"
        android:icon="@drawable/round_credit_card_black_36dp"
        android:title="@string/title_finance" />

</menu>