<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"


    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    android:forceDarkAllowed="true"
    android:layerType="hardware"
    android:paddingBottom="?attr/actionBarSize"
    app:statusBarBackground="#FFB300">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"

        android:layout_width="match_parent"
        android:layout_height="192dp">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            style="@style/Theme.MyApplication"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:forceDarkAllowed="true"
            android:scrollbarTrackHorizontal="?android:attr/fastScrollTrackDrawable"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:title="@string/title_create"
            app:titleEnabled="true"
            app:toolbarId="@+id/toolbar">


            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:clickable="true"
                app:menu="@menu/toolbar_menu"
                app:navigationIcon="?attr/actionModeCloseDrawable"
                app:title="@string/title_create"></androidx.appcompat.widget.Toolbar>
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"


        android:visibility="visible"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".ui.care.CareFragment">

            <Button
                android:id="@+id/create_park"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_marginTop="8dp"
                android:alpha="1"
                android:backgroundTint="#202020"
                android:elevation="20dp"
                android:fontFamily="@font/roboto_condensed_regular"
                android:fontFeatureSettings="@string/app_name"
                android:gravity="clip_horizontal|clip_vertical|start|fill"
                android:onClick="Click"
                android:scaleX="0.975"
                android:text="@string/create_park"
                android:textSize="14sp"
                android:translationZ="10dp"
                android:typeface="sans"
                app:cornerRadius="10dp"
                app:icon="@drawable/outline_nature_people_white_36dp"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_editor_absoluteX="0dp" />

            <Button
                android:id="@+id/create_roads"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:alpha="1"
                android:backgroundTint="@color/grey_plus"
                android:fontFamily="@font/roboto_condensed_regular"
                android:gravity="clip_horizontal|clip_vertical|fill"
                android:onClick="Click"
                android:scaleX="0.975"
                android:text="@string/create_roads"
                android:textSize="14sp"
                android:typeface="sans"
                app:cornerRadius="10dp"
                app:icon="@drawable/outline_add_road_white_36dp"
                app:layout_constraintTop_toBottomOf="@+id/create_park"
                tools:layout_editor_absoluteX="0dp" />

            <Button
                android:id="@+id/create_zdroads"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:alpha="1"
                android:backgroundTint="@color/grey_plus"
                android:fontFamily="@font/roboto_condensed_regular"
                android:gravity="clip_horizontal|clip_vertical|fill"
                android:onClick="Click"
                android:scaleX="0.975"
                android:text="@string/create_zdroads"
                android:textSize="14sp"
                android:typeface="sans"
                app:cornerRadius="10dp"
                app:icon="@drawable/outline_train_white_36dp"
                app:layout_constraintTop_toBottomOf="@+id/create_roads"
                tools:layout_editor_absoluteX="8dp" />

            <Button
                android:id="@+id/create_vokzal"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:alpha="1"
                android:backgroundTint="@color/grey_plus"
                android:fontFamily="@font/roboto_condensed_regular"
                android:gravity="clip_horizontal|clip_vertical|fill"
                android:onClick="Click"
                android:scaleX="0.975"
                android:text="@string/create_vokzal"
                android:textSize="14sp"
                android:typeface="sans"
                app:cornerRadius="10dp"
                app:icon="@drawable/outline_hail_white_36dp"
                app:layout_constraintTop_toBottomOf="@+id/create_zdroads"
                tools:layout_editor_absoluteX="0dp" />

            <TextView
                android:id="@+id/text_notifications"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:textAlignment="center"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:src="@android:drawable/ic_input_add"
        android:visibility="invisible" />"

</androidx.coordinatorlayout.widget.CoordinatorLayout>