<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/backgroundColor">

    <Button
        android:id="@+id/lang_btn"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_weight="1"
        android:backgroundTint="?attr/colorSurface"
        android:insetLeft="8dp"
        android:insetTop="0dp"
        android:insetRight="8dp"
        android:insetBottom="0dp"
        android:text="@string/lang"
        app:cornerRadius="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/theme_btn" />

    <Button
        android:id="@+id/theme_btn"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_weight="1"
        android:backgroundTint="?attr/colorSurface"
        android:insetLeft="8dp"
        android:insetTop="0dp"
        android:insetRight="8dp"
        android:insetBottom="0dp"
        android:onClick="Click"
        android:text="@string/theme"
        app:cornerRadius="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbarfrag4" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarfrag4"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorAccent"
        android:backgroundTintMode="src_in"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/settings"
        app:titleMarginStart="56dp"
        app:titleTextColor="?attr/colorOnSurface"></androidx.appcompat.widget.Toolbar>

    <Button
        android:id="@+id/back_button_settings"
        android:layout_width="?attr/actionBarSize"
        android:layout_height="?attr/actionBarSize"
        android:layout_gravity="top|left"
        android:background="#00FFFFFF"
        android:foreground="@drawable/baseline_arrow_back_36"
        android:foregroundTint="?attr/colorOnSurface"
        android:foregroundTintMode="src_in"
        android:onClick="Click"
        android:scaleX="0.5"
        android:scaleY="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>