<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"


    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"

        android:layout_width="match_parent"
        android:layout_height="192dp">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"

            app:title="@string/title_care"
            app:toolbarId="@+id/toolbar">


            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:menu="@menu/toolbar_menu"
                app:navigationIcon="?attr/homeAsUpIndicator"></androidx.appcompat.widget.Toolbar>
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"


        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".ui.care.CareFragment">

            <Button
                android:id="@+id/care_houses"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_marginTop="8dp"
                android:alpha="1"
                android:backgroundTint="#202020"
                android:elevation="20dp"
                android:fontFamily="@font/raleway_semibold"
                android:gravity="clip_horizontal|clip_vertical|start|fill"
                android:onClick="Click"
                android:scaleX="0.975"
                android:text="@string/care_houses"
                android:textSize="14sp"
                android:translationZ="10dp"
                android:typeface="sans"
                app:cornerRadius="10dp"
                app:icon="@drawable/outline_handyman_black_36dp"
                app:iconTint="@color/rally_blue"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_editor_absoluteX="0dp" />

            <Button
                android:id="@+id/care_street"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:alpha="1"
                android:backgroundTint="@color/grey_plus"
                android:fontFamily="@font/raleway_semibold"
                android:gravity="clip_horizontal|clip_vertical|fill"
                android:onClick="Click"
                android:scaleX="0.975"
                android:text="@string/care_street"
                android:textSize="14sp"
                android:typeface="sans"
                app:cornerRadius="10dp"
                app:icon="@drawable/baseline_cleaning_services_black_36dp"
                app:iconTint="@color/rally_yellow"
                app:layout_constraintTop_toBottomOf="@id/care_houses"
                app:rippleColor="@color/rally_yellow"
                tools:layout_editor_absoluteX="0dp" />

            <Button
                android:id="@+id/care_water"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:alpha="1"
                android:backgroundTint="@color/grey_plus"
                android:fontFamily="@font/raleway_semibold"
                android:gravity="clip_horizontal|clip_vertical|fill"
                android:onClick="Click"
                android:scaleX="0.975"
                android:text="@string/care_water"
                android:textSize="14sp"
                android:typeface="sans"
                app:cornerRadius="10dp"
                app:icon="@drawable/baseline_water_black_36dp"
                app:iconTint="@color/rally_orange"
                app:layout_constraintTop_toBottomOf="@id/care_street"
                app:rippleColor="@color/rally_orange"
                tools:layout_editor_absoluteX="8dp" />

            <Button
                android:id="@+id/care_roads"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:alpha="1"
                android:backgroundTint="@color/grey_plus"
                android:fontFamily="@font/raleway_semibold"
                android:gravity="clip_horizontal|clip_vertical|fill"
                android:onClick="Click"
                android:scaleX="0.975"
                android:text="@string/care_roads"
                android:textSize="14sp"
                android:typeface="sans"
                app:cornerRadius="10dp"
                app:icon="@drawable/baseline_edit_road_black_36dp"
                app:iconTint="@color/rally_purple"
                app:layout_constraintTop_toBottomOf="@id/care_water"
                tools:layout_editor_absoluteX="0dp" />

            <TextView
                android:id="@+id/text_notifications"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:textAlignment="center"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:src="@android:drawable/ic_input_add"
        android:visibility="invisible" />"

</androidx.coordinatorlayout.widget.CoordinatorLayout>